Prevent overflow of <body>
This allows plugins like Dark Reader to better style the page.

--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -3,14 +3,19 @@
 }
 
 body {
-  max-width: 1000px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   background-color: $app-bg;
   color: #fff;
   font-size: 0;
   font-weight: 300;
+}
+
+main {
+  display: block;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 a {
@@ -28,10 +33,10 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
-  margin-bottom: 1.3rem;
+  padding-top: 2rem;
+  padding-bottom: 1.3rem;
   @media (min-width: $app-hybrid-max-width) {
-    margin-top: 1.3rem;
+    padding-top: 1.3rem;
   }
 }
 
